--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
+
+    <script src="./src/lama.js"  type="text/javascript" defer></script>
+    <script src="./src/index.js"  type="text/javascript" defer></script>
 </head>
 <body>
     <div id="app"></div>
-    <script src="src/index.ts"></script>
 </body>
 </html>
