--- a/index.html
+++ b/index.html
@@ -12,11 +12,31 @@
     <script src="./src/lama.js"  type="text/javascript" defer></script>
     <script src="./src/borders.js"  type="text/javascript" defer></script>
     <script src="./src/collectible.js"  type="text/javascript" defer></script>
+    <script src="./src/savestate.js"  type="text/javascript" defer></script>
     <script src="./src/index.js"  type="text/javascript" defer></script>
 </head>
 <body>
-    
-    <div id="app"></div>
+    <div id="wrapper">
+        <div id="app"></div>
+        <div id="toolbar" class="disabled">
+            <div onclick="toolbarclick(this)" class="border" id="border"></div>
+            <div onclick="toolbarclick(this)" class="lama" id="lama"></div>
+            <div onclick="toolbarclick(this)" class="spawn" id="spawn"></div>
+            <div onclick="toolbarclick(this)" class="cookie" id="cookie"></div>
+            <div onclick="toolbarclick(this)" class="powerup" id="powerup"></div>
+            <div onclick="toolbarclick(this)" class="delete" id="delete"></div>
+        </div>
+        <div id="mode">
+            <button onclick="activateEditing(this)" id="editBtn">Editieren</button>
+            <div>
+                <span>Ausgewählt: </span>
+                <span id="currentSelection"></span>
+            </div>
+            <button disabled onclick="saveMap(this)" id="saveBtn">Speichern</button>
+            <button onclick="loadMap(this)" id="saveBtn">Laden</button>
+        </div>
+        <span  id="io"></span>
+    </div>
 
 </body>
 </html>
