--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js" defer></script>
+    <script src="./lib/p5.min.js" defer></script>
 
     <script src="./src/entity.js"  type="text/javascript" defer></script>
+    <script src="./src/moveable.js"  type="text/javascript" defer></script>
+    <script src="./src/gertruds.js"  type="text/javascript" defer></script>
     <script src="./src/lama.js"  type="text/javascript" defer></script>
     <script src="./src/borders.js"  type="text/javascript" defer></script>
     <script src="./src/collectible.js"  type="text/javascript" defer></script>
@@ -21,7 +23,12 @@
         <div id="toolbar" class="disabled">
             <div onclick="toolbarclick(this)" class="border" id="border"></div>
             <div onclick="toolbarclick(this)" class="lama" id="lama"></div>
-            <div onclick="toolbarclick(this)" class="spawn" id="spawn"></div>
+            <div id="allGerturds">
+                <div class="gertrud1" onclick="toolbarclick(this)" id="gertrud1"></div>
+                <div class="gertrud2" onclick="toolbarclick(this)" id="gertrud2"></div>
+                <div class="gertrud3" onclick="toolbarclick(this)" id="gertrud3"></div>
+                <div class="gertrud4" onclick="toolbarclick(this)" id="gertrud4"></div>
+            </div>
             <div onclick="toolbarclick(this)" class="cookie" id="cookie"></div>
             <div onclick="toolbarclick(this)" class="powerup" id="powerup"></div>
             <div onclick="toolbarclick(this)" class="delete" id="delete"></div>
