even better map :)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="./src/moveable.js"  type="text/javascript" defer></script>
     <script src="./src/gertruds.js"  type="text/javascript" defer></script>
     <script src="./src/lama.js"  type="text/javascript" defer></script>
+    <script src="./src/void.js"  type="text/javascript" defer></script>
     <script src="./src/borders.js"  type="text/javascript" defer></script>
     <script src="./src/collectible.js"  type="text/javascript" defer></script>
     <script src="./src/savestate.js"  type="text/javascript" defer></script>
@@ -22,6 +23,7 @@
         <div id="app"></div>
         <div id="toolbar" class="disabled">
             <div onclick="toolbarclick(this)" class="border" id="border"></div>
+            <div onclick="toolbarclick(this)" class="void" id="void"></div>
             <div onclick="toolbarclick(this)" class="lama" id="lama"></div>
             <div id="allGerturds">
                 <div class="gertrud1" onclick="toolbarclick(this)" id="gertrud1"></div>
