--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="./lib/p5.min.js" defer></script>
-
     <script src="./src/entity.js"  type="text/javascript" defer></script>
     <script src="./src/moveable.js"  type="text/javascript" defer></script>
     <script src="./src/gertruds.js"  type="text/javascript" defer></script>
@@ -34,6 +33,7 @@
             <div onclick="toolbarclick(this)" class="cookie" id="cookie"></div>
             <div onclick="toolbarclick(this)" class="powerup" id="powerup"></div>
             <div onclick="toolbarclick(this)" class="delete" id="delete"></div>
+            <div onclick="toolbarclick(this)" class="homeTarget" id="homeTarget">Home</div>
         </div>
         <div id="mode">
             <button onclick="activateEditing(this)" id="editBtn">Editieren</button>
