--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="./src/gertruds.js"  type="text/javascript" defer></script>
     <script src="./src/lama.js"  type="text/javascript" defer></script>
     <script src="./src/void.js"  type="text/javascript" defer></script>
+    <script src="./src/door.js"  type="text/javascript" defer></script>
     <script src="./src/borders.js"  type="text/javascript" defer></script>
     <script src="./src/collectible.js"  type="text/javascript" defer></script>
     <script src="./src/savestate.js"  type="text/javascript" defer></script>
@@ -34,6 +35,7 @@
             <div onclick="toolbarclick(this)" class="powerup" id="powerup"></div>
             <div onclick="toolbarclick(this)" class="delete" id="delete"></div>
             <div onclick="toolbarclick(this)" class="homeTarget" id="homeTarget">Home</div>
+            <div onclick="toolbarclick(this)" class="homeWall" id="homeWall"></div>
         </div>
         <div id="mode">
             <button onclick="activateEditing(this)" id="editBtn">Editieren</button>
