--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="./lib/p5.min.js" defer></script>
+    <script src="./src/fraction.js"  type="text/javascript" defer></script>
     <script src="./src/entity.js"  type="text/javascript" defer></script>
     <script src="./src/moveable.js"  type="text/javascript" defer></script>
     <script src="./src/gertruds.js"  type="text/javascript" defer></script>
