First typescript build!!

--- a/index.html
+++ b/index.html
@@ -6,18 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./lib/p5.min.js" defer></script>
-    <script src="./src/fraction.js"  type="text/javascript" defer></script>
-    <script src="./src/entity.js"  type="text/javascript" defer></script>
-    <script src="./src/moveable.js"  type="text/javascript" defer></script>
-    <script src="./src/gertruds.js"  type="text/javascript" defer></script>
-    <script src="./src/lama.js"  type="text/javascript" defer></script>
-    <script src="./src/void.js"  type="text/javascript" defer></script>
-    <script src="./src/door.js"  type="text/javascript" defer></script>
-    <script src="./src/borders.js"  type="text/javascript" defer></script>
-    <script src="./src/collectible.js"  type="text/javascript" defer></script>
-    <script src="./src/savestate.js"  type="text/javascript" defer></script>
-    <script src="./src/index.js"  type="text/javascript" defer></script>
+    <script type="text/javascript" src="./dist/bundle.js"></script>
 </head>
 <body>
     <div id="wrapper">
