smaller maps now possibel

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,14 +29,14 @@
                 <div class="gertrud3"  id="gertrud3"></div>
                 <div class="gertrud4"  id="gertrud4"></div>
             </div>
-            <div  class="cookie" id="cookie"></div>
+            <div class="lamai_cookie" id="lamai_cookie"></div>
             <div  class="powerup" id="powerup"></div>
             <div  class="delete" id="delete"></div>
             <div  class="homeTarget" id="homeTarget">Home</div>
             <div  class="homeWall" id="homeWall"></div>
         </div>
         <div>
-            <input type="range" id="brushRadius" min="1" max="5" step="0.1" value="1">
+            <input type="range" id="brushRadius" min="0" max="5" step="0.1" value="1">
         </div>
         <div id="mode">
             <button id="editButton">Editieren</button>
@@ -48,6 +48,7 @@
             <select name="mapSelect" id="mapSelect">
             </select>
             <button id="loadButton">Speichern</button>
+            <button id="newMap">Neu</button>
         </div>
     </div>
 
