agents now work i guess

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,9 @@
         </div>
     </div>
     <div id="wrapper">
+        <div id="scoreboard">
+            <div id="points"><span>0</span> Punkte</div>
+        </div>
         <div id="app"></div>
         <div id="toolbar" class="disabled">
             <div  class="border" id="border"></div>
@@ -36,7 +39,7 @@
             <div  class="homeWall" id="homeWall"></div>
         </div>
         <div>
-            <input type="range" id="brushRadius" min="0" max="5" step="0.1" value="1">
+            <input type="range" id="brushRadius" min="0" max="5" step="0.1" value="0">
         </div>
         <div id="mode">
             <button id="editButton">Editieren</button>
