Agent type now saves aswell

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,6 +48,11 @@
                 <span id="currentSelection"></span>
             </div>
             <button disabled id="saveButton">Speichern als...</button>
+            <select name="agentSelect" id="agentSelect">
+                <option value="null">Spieler</option>
+                <option value="random">Random Agent</option>
+                <option value="reflex">Reflex Agent</option>
+            </select>
             <select name="mapSelect" id="mapSelect">
             </select>
             <button id="loadButton">Speichern</button>
