is now debuggable (in vsc)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,6 +52,7 @@
                 <option value="null">Spieler</option>
                 <option value="random">Random Agent</option>
                 <option value="reflex">Reflex Agent</option>
+                <option value="replanning">Replanning Agent</option>
             </select>
             <select name="mapSelect" id="mapSelect">
             </select>
